<resources>
    <!-- General -->
    <string name="app_name">Feeling</string>
    <string name="asset_statements">
        [{
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {\"namespace\": \"web\", \"site\": \"https://getfeeling.app\"}
        }]
    </string>

    <!-- Sign In -->
    <string name="sign_in_description">Hey, nice to meet you! Choose one of the options below to get started.</string>
    <string name="sign_in_google">Continue with Google</string>
    <string name="sign_in_email">Continue with Email</string>
    <string name="sign_in_terms">By signing up, you understand that you must be 13 or older and agree to our agree to
        our Terms and Conditions and our Privacy Policy.
    </string>
    <string name="sign_in_logo_alt">Logo</string>

    <!-- Main Activity -->
    <string name="bottom_navigation_me">Me</string>
    <string name="bottom_navigation_settings">Settings</string>

    <!-- Me Fragment -->
    <string name="toolbar_welcome">Welcome Back %s</string>
    <string name="calendar_day_desc">Emotion</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="weekday_mon">M</string>
    <string name="weekday_tue">T</string>
    <string name="weekday_wed">W</string>
    <string name="weekday_thu">T</string>
    <string name="weekday_fri">F</string>
    <string name="weekday_sat">S</string>
    <string name="weekday_sun">S</string>
    <string name="emotion_amazing">Amazing</string>
    <string name="emotion_great">Great</string>
    <string name="emotion_unsure">Unsure</string>
    <string name="emotion_angry">Angry</string>
    <string name="emotion_upset">Upset</string>

    <!-- Day Fragment -->
    <string-array name="ordinal_numbers">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>
    <string name="day_subtitle">On this day you were %s</string>
</resources>
