<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="fragment"
                type="app.getfeeling.feeling.ui.signin.SignInFragment" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.signin.SignInFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorLight"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/greeting_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                    app:layout_constraintTop_toTopOf="parent">

                <!-- Radius of background circle is 228 if width is 412 -->
                <ImageView
                        android:id="@+id/background_circle_image"
                        android:layout_width="750dp"
                        android:layout_height="750dp"
                        android:contentDescription="@string/sign_in_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/sign_in_circle_background" />


                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guildline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintGuide_percent="0.6"
                        app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                        android:id="@+id/logo"
                        android:layout_width="411dp"
                        android:layout_height="125dp"
                        android:layout_marginBottom="20dp"
                        android:contentDescription="@string/sign_in_logo_alt"
                        app:layout_constraintBottom_toTopOf="@+id/guildline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/logo" />

                <TextView
                        android:id="@+id/sign_in_description"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/sign_in_description"
                        android:textAlignment="center"
                        android:textColor="@color/colorDark"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/guildline" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingTop="40dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                <Button
                        android:id="@+id/google_sign_in_button"
                        style="@style/GoogleSignInButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_google"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <Button
                        android:id="@+id/email_sign_in_button"
                        style="@style/EmailSignInButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="@{() -> fragment.continueWithEmail()}"
                        android:text="@string/sign_in_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:lineSpacingMultiplier="1.1"
                        android:text="@string/sign_in_terms"
                        android:textAlignment="center"
                        android:textColor="@color/colorDark"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
